Refactor performance test documentation and update PostgreSQL container versions